# caqti-study

./: .gitignore  DEPLOY.md  LICENSE  Makefile  README.md  TODO  dev.opam  docusaurus.config.ts  dune-project  dune-workspace  package-lock.json  package.json  sidebars.ts  sidebarsStudy.ts
00-hello-world/: README.md
00-hello-world/lib/: dune
01-hello-tests/lib/: greetings.ml
01-hello-tests/test/: greetings_test.ml
02-hello-caqti-blocking/: README.md
02-hello-caqti-blocking/lib/repo/: dune  exec.ml  init.ml
03-hello-caqti-lwt/: README.md  dune
03-hello-caqti-lwt/lib/repo/: dune  exec.ml  init.ml
03-hello-caqti-lwt/test/repo/: init_test.ml
04-hello-caqti-async/: README.md
04-hello-caqti-async/lib/repo/: exec.ml  init.ml
04-hello-caqti-async/test/repo/: init_test.ml
05-lwt-cli-app/: README.md  dune  dune-project
05-lwt-cli-app/lib/repo/: author.ml  bibliography.ml  book.ml  dune  init.ml
05-lwt-cli-app/test/repo/: author_test.ml  bibliography_test.ml  book_test.ml  dune  setup.ml
docs/: intro.md
manage/: build_and_test.sh
src/pages/: index.tsx
study/: README.md  README2.md
study/bikereg-eio/: README.md  bikereg.ml  dune
study/bikereg-lwt/: README.md  bikereg.ml  dune
study/hello-caqti-async/: README.md  dune
study/hello-caqti-async/lib/repo/: dune  exec.ml  init.ml  init.mli
study/hello-caqti-async/test/repo/: dune  handlers.ml
study/hello-caqti-blocking/: README.md
study/hello-caqti-blocking/lib/repo/: exec.ml  init.ml  init.mli
study/hello-caqti-blocking/test/repo/: init_test.ml
study/hello-caqti-eio/: README.md  dune
study/hello-caqti-eio/lib/repo/: dune  exec.ml  init.ml  init.mli
study/hello-caqti-eio/test/repo/: dune  exec_test.ml
study/hello-caqti-lwt/: README.md  dune
study/hello-caqti-lwt/lib/repo/: exec.ml  init.ml  init.mli
study/hello-ppx_rapper/: README.md  dune
study/hello-ppx_rapper/lib/repo/: dune  exec.ml  fake_users.ml  init.ml  init.mli
study/hello-ppx_rapper/test/repo/: dune  fake_users_test.ml  init_test.ml
study/hello-tests/: README.md  dune-project
study/hello-tests/lib/: greetings.ml
study/hello-tests/test/: dune
study/hello-world/: README.md  dune
study/hello-world/lib/: dune  greetings.ml
study/lwt-cli-app/: dune
study/lwt-cli-app/lib/repo/: author.ml  bibliography.ml  book.ml  exec.ml  init.ml
study/lwt-cli-app/test/repo/: bibliography_test.ml  dune  setup.ml  utils.ml
