(*

  To install the dependencies listed in this file, run:
    opam install . --deps-only

  ---

  To optionally isolate these dependencies to the current folder, create a "switch" like so:
    opam switch create . {OCAML_VERSION} --deps-only

  Or optionally install as a global switch with a custom name:
    opam switch create caqti-study 5.1.0

  ---

  Run this to find the latest OCaml version:
    opam switch list-available | grep -E 'base-compiler.+Official'

  ---

  To find your current switch configuration, run:
    opam switch

  ---

  Other useful commands:
    - opam switch       # find currently installed switches
    - opam switch 5.1.0 # change to the 5.10 switch configuration

*)

opam-version: "2.0"

depends: [
  "caqti" { >= "2.0.1" }

  "caqti-driver-postgresql"
  "caqti-lwt"
  "caqti-async"
  "async"
  "caqti-eio"
  "eio_main"
  "ppx_rapper"
  "ppx_rapper_lwt"

  # Below is for testing only
  "base"
  "ppx_assert"
  "ppx_inline_test"
  "sexplib"
  "ppx_sexp_conv"

  # Below is for documentation purposes
  "mdx"
]

pin-depends: [
  "ppx_rapper.3.1.0" "git+https://github.com/roddyyaga/ppx_rapper#2222edbbe68db7ba1ab0c7a2688c227ea5c0f230"
]