(*

  To optionally isolate these dependencies to the current folder, create a "switch" like so:
    opam switch create . OCAML-VERSION --deps-only

  Or optionally install as a global switch with a custom name:
    opam switch create caqti-study OCAML-VERSION

  ---

  Run this to find the latest OCaml version:
    opam switch list-available base | grep Official

  ---

  To find your current switch configuration, run:
    opam switch

  ---

  Other useful commands:
    - opam switch             # find currently installed switches
    - opam switch caqti-study # change to the named switch configuration

  ---

  To install the dependencies listed in this file, run:
    - opam install --deps-only -td .

*)

opam-version: "2.0"

synopsis:
  "Pseudo-package for pulling in dependecies for the Caqti study project"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: [
  "Benjamin Thomas <benjamin.guy.thomas@gmail.com>"
  "Petter A. Urkedal <paurkedal@gmail.com>"
]
homepage: "https://github.com/paurkedal/caqti-study"
bug-reports: "https://github.com/paurkedal/caqti-study/issues"
license: "MIT"
depends: [
  "caqti" {>= "2.1.2" & < "3.0.0~"}

  "caqti-driver-postgresql"
  "lwt"
  "caqti-lwt"
  "async"
  "caqti-async"
  "caqti-eio"
  "eio_main"
  "ppx_rapper"
  "ppx_rapper_lwt"

  # Below is for testing only
  "base"            {with-test}
  "ppx_assert"      {with-test}
  "ppx_inline_test" {with-test}
  "sexplib"         {with-test}
  "ppx_sexp_conv"   {with-test}
  "utop"            {with-test}

  # Below is for documentation purposes
  "mdx"
]

